<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestApp</string>
    <string name="bt_connect">Connect</string>
    <string name="bt_list">List</string>
    <string name="bt_ex">Ex</string>
    <string name="c_up">Up</string>
	<string name="c_down">Down</string>
	<string name="c_left">Left</string>
	<string name="c_right">Right</string>
	<string name="c_a">A</string>
	<string name="c_b">B</string>
	<string name="state">State not found</string>
	<string name="buttonStart">Start</string>
	<string name="buttonSelect">Select</string>
	<string name="buttonClear">Clear</string>
    <string name="action_settings">Settings</string>
    <string name="buttonSend">Send</string>
    <string name="killButton">KILL</string>
    <string name="small">bitval</string>
    <string name="death">reset</string>

</resources>
